# WIPTFMs

./: .env  CSV_Server.py  Consumption_from_edist.py  Consumption_preparation.py  PV_sim.py  README.md  app.py  hour_profile.py  main.py  pyproject.toml  requirements.txt
data/: ExportData_dicembre.csv  ExportData_giugno.csv  ExportData_maggio.csv  ExportData_marzo.csv  ExportData_novembre.csv  ExportData_settembre.csv  output.csv
input/: ExportData_agosto.csv  ExportData_aprile.csv  ExportData_febbraio.csv  ExportData_gennaio.csv  ExportData_luglio.csv  ExportData_ottobre.csv
tools/: calculate_pv_output.py  convert_pvgis_todf.py  pv_output_estimator.py  tool_def.py
